# samsung-grab

./: .gitignore  config.nix  default.nix  flake.nix  lock.aarch64-linux.json  lock.x86_64-linux.json  pkg.nix  pyproject.toml
samsung_grab/: samsung_grab.py
